# revenueops-ai

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
data/raw/: sales_data.csv
notebooks/: 1_eda_time_series_analysis.ipynb
requirements/: base.txt  dev.txt
